packages/optimizer/core/src/snapshots/qwik_core__test__example_ts_enums_issue_1341.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 2199
expression: output
---
==INPUT==


import { component$, useStore } from '@qwik.dev/core';

enum Thing {
	A,
	B
}

export const App = component$(() => {
	console.log(Thing.A);
	return (
		<>
			<p class="stuff">Hello Qwik</p>
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
/*#__PURE__*/ (function(Thing) {
    Thing[Thing["A"] = 0] = "A";
    Thing[Thing["B"] = 1] = "B";
    return Thing;
})({});
export const App = /*#__PURE__*/ componentQrl(q_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;wBAGK;;;WAAA;;AAKL,OAAO,MAAM,oBAAM,0CAOhB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { _jsxSorted } from "@qwik.dev/core";
//
export const App_component_ckEPmXZlub0 = ()=>{
    console.log(0);
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, /*#__PURE__*/ _jsxSorted("p", null, {
        class: "stuff"
    }, "Hello Qwik", 3, null), 3, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAQ8B;IAC7B,QAAQ,GAAG;IACX,qBACC,gDACC,WAAC;QAAE,OAAM;OAAQ;AAGpB\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    111,
    203
  ]
}
*/
== DIAGNOSTICS ==

[]
