packages/optimizer/core/src/snapshots/qwik_core__test__example_use_optimization.snap
---
source: packages/optimizer/core/src/test.rs
assertion_line: 679
expression: output
---
==INPUT==


import { $, component$, useTask$ } from '@qwik.dev/core';
import { CONST } from 'const';
export const Works = component$((props) => {
	const {countNested} = useStore({value:{count:0}}).value;
	const countNested2 = countNested;
	const {hello} = countNested2;
	const bye = hello.bye;
	const {ciao} = bye.italian;


	return (
		<div ciao={ciao} >{foo}</div>
	);
});

============================= test.jsx ==

import { componentQrl } from "@qwik.dev/core";
import { _noopQrl } from "@qwik.dev/core";
//
const q_Works_component_t45qL4vNGv0 = /*#__PURE__*/ _noopQrl("Works_component_t45qL4vNGv0");
//
q_Works_component_t45qL4vNGv0.s((props)=>{
    const store = useStore({
        value: {
            count: 0
        }
    });
    return <div ciao={store.value.countNested.hello.bye.italian.ciao}>{foo}</div>;
});
export const Works = /*#__PURE__*/ componentQrl(q_Works_component_t45qL4vNGv0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;gCAGgC,CAAC;IAChC,MAAM,QAAgB,SAAS;QAAC,OAAM;YAAC,OAAM;QAAC;IAAC;IAO/C,QACE,IAAI,MAJS,AADH,MAHsC,MAA3C,YAEA,MACW,GAAG,CACF,OAAO,CAAnB,OAIa,MAAM;AAE3B;AAXA,OAAO,MAAM,sBAAQ,4CAWlB\"}")
== DIAGNOSTICS ==

[]
